--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
           <button class="title-button">Order Service</button>
         </div>
       </section>
-      <section>
+      <section class="padding-for-section">
         <div class="container">
-          <h2>About Our Work</h2>
-          <ul>
+          <h2 class="visually-hidden">About Our Work</h2>
+          <ul class="our-work-box_style">
             <li>
               <h3 class="about-our-work-title">Strategy</h3>
               <p class="about-our-work-description">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
@@ -68,70 +68,88 @@
         </div>
         </ul>
       </section>
-      <section class="our-team-section">
-        <h2 class="our-team-title">Our Team</h2>
-        <ul class="align-center">
-          <li class="team-member">
-            <img src="./images/img4.jpg" alt="Mark Guerrero" width="264" />
-            <h3 class="about-our-work-title">Mark Guerrero</h3>
-            <p class="about-our-team-description">Product Designer</p>
-          </li>
-          <li class="team-member">
-            <img src="./images/img3.jpg" alt="Tom Ford" width="264" />
-            <h3 class="about-our-work-title">Tom Ford</h3>
-            <p class="about-our-team-description">Frontend Developer</p>
-          </li>
-          <li class="team-member">
-            <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" />
-            <h3 class="about-our-work-title">Camila Garcia</h3>
-            <p class="about-our-team-description">Marketing</p>
-          </li>
-          <li class="team-member">
-            <img src="./images/img2.jpg" alt="Daniel Wilson" width="264" />
-            <h3 class="about-our-work-title">Daniel Wilson</h3>
-            <p class="about-our-team-description">UI Designer</p>
-          </li>
-        </ul>
+      <section class="our-team-section padding-for-section">
+        <div class="container">
+          <h2 class="our-team-title">Our Team</h2>
+          <ul class="align-center">
+            <li class="team-member">
+              <img src="./images/img4.jpg" alt="Mark Guerrero" width="264" />
+              <h3 class="about-our-work-title">Mark Guerrero</h3>
+              <p class="about-our-team-description">Product Designer</p>
+            </li>
+            <li class="team-member">
+              <img src="./images/img3.jpg" alt="Tom Ford" width="264" />
+              <h3 class="about-our-work-title">Tom Ford</h3>
+              <p class="about-our-team-description">Frontend Developer</p>
+            </li>
+            <li class="team-member">
+              <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" />
+              <h3 class="about-our-work-title">Camila Garcia</h3>
+              <p class="about-our-team-description">Marketing</p>
+            </li>
+            <li class="team-member">
+              <img src="./images/img2.jpg" alt="Daniel Wilson" width="264" />
+              <h3 class="about-our-work-title">Daniel Wilson</h3>
+              <p class="about-our-team-description">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2 class="about-our-portfolio-title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img src="./images/imgapp.jpg" alt="Banking App" width="360" />
-            <h3 class="about-our-portfolio-last-title">Banking App</h3>
-            <p class="about-our-portfolio-description">App</p>
-          </li>
-          <li>
-            <img src="./images/img-phoneapp.jpg" alt="Cashless Payment" width="360" />
-            <h3 class="about-our-portfolio-last-title">Cashless Payment</h3>
-            <p class="about-our-portfolio-description">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/img-note.jpg" alt="Meditation App" width="360" />
-            <h3 class="about-our-portfolio-last-title">Meditation App</h3>
-            <p class="about-our-portfolio-description">App</p>
-          </li>
-          <li>
-            <img src="./images/img-car.jpg" alt="Taxi Service" width="360" />
-            <h3 class="about-our-portfolio-last-title">Taxi Service</h3>
-            <p class="about-our-portfolio-description">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/img-phone.jpg" alt="Screen Illustrations" width="360" />
-            <h3 class="about-our-portfolio-last-title">Screen Illustrations</h3>
-            <p class="about-our-portfolio-description">Design</p>
-          </li>
-          <li>
-            <img src="./images/img-women.jpg" alt="Online Courses" width="360" />
-            <h3 class="about-our-portfolio-last-title">Online Courses</h3>
-            <p class="about-our-portfolio-description">Marketing</p>
-          </li>
-        </ul>
+      <section class="padding-for-section">
+        <div class="container">
+          <h2 class="about-our-portfolio-title">Our Portfolio</h2>
+          <ul class="about-our-portfolio_list">
+            <li>
+              <img src="./images/imgapp.jpg" alt="Banking App" width="360" />
+              <div class="second-portfolio-box">
+                <h3 class="about-our-portfolio-last-title">Banking App</h3>
+                <p class="about-our-portfolio-description">App</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/img-phoneapp.jpg" alt="Cashless Payment" width="360" />
+              <div class="second-portfolio-box">
+                <h3 class="about-our-portfolio-last-title">Cashless Payment</h3>
+                <p class="about-our-portfolio-description">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/img-note.jpg" alt="Meditation App" width="360" />
+              <div class="second-portfolio-box">
+                <h3 class="about-our-portfolio-last-title">Meditation App</h3>
+                <p class="about-our-portfolio-description">App</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/img-car.jpg" alt="Taxi Service" width="360" />
+              <div class="second-portfolio-box">
+                <h3 class="about-our-portfolio-last-title">Taxi Service</h3>
+                <p class="about-our-portfolio-description">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/img-phone.jpg" alt="Screen Illustrations" width="360" />
+              <div class="second-portfolio-box">
+                <h3 class="about-our-portfolio-last-title">Screen Illustrations</h3>
+                <p class="about-our-portfolio-description">Design</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/img-women.jpg" alt="Online Courses" width="360" />
+              <div class="second-portfolio-box">
+                <h3 class="about-our-portfolio-last-title">Online Courses</h3>
+                <p class="about-our-portfolio-description">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html">Web<span class="logo-span-footer">Studio</span></a>
-      <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <div class="container padding-for-section">
+        <a class="logo" href="./index.html">Web<span class="logo-span-footer">Studio</span></a>
+        <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      </div>
     </footer>
   </body>
 </html>
