--- a/index.html
+++ b/index.html
@@ -84,28 +84,28 @@
             <li class="team-member">
               <img src="./images/img4.jpg" alt="Mark Guerrero" width="264" />
               <div class="about-worker-info">
-                <h3 class="about-our-work-title">Mark Guerrero</h3>
+                <h3 class="about-our-work-title margin_title">Mark Guerrero</h3>
                 <p class="about-our-team-description">Product Designer</p>
               </div>
             </li>
             <li class="team-member">
               <img src="./images/img3.jpg" alt="Tom Ford" width="264" />
               <div class="about-worker-info">
-                <h3 class="about-our-work-title">Tom Ford</h3>
+                <h3 class="about-our-work-title margin_title">Tom Ford</h3>
                 <p class="about-our-team-description">Frontend Developer</p>
               </div>
             </li>
             <li class="team-member">
               <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" />
               <div class="about-worker-info">
-                <h3 class="about-our-work-title">Camila Garcia</h3>
+                <h3 class="about-our-work-title margin_title">Camila Garcia</h3>
                 <p class="about-our-team-description">Marketing</p>
               </div>
             </li>
             <li class="team-member">
               <img src="./images/img2.jpg" alt="Daniel Wilson" width="264" />
               <div class="about-worker-info">
-                <h3 class="about-our-work-title">Daniel Wilson</h3>
+                <h3 class="about-our-work-title margin_title">Daniel Wilson</h3>
                 <p class="about-our-team-description">UI Designer</p>
               </div>
             </li>
@@ -116,42 +116,42 @@
         <div class="container">
           <h2 class="about-our-portfolio-title">Our Portfolio</h2>
           <ul class="about-our-portfolio_list">
-            <li>
+            <li class=".about-our-portfolio_list_elements">
               <img src="./images/imgapp.jpg" alt="Banking App" width="360" />
               <div class="second-portfolio-box">
                 <h3 class="about-our-portfolio-last-title">Banking App</h3>
                 <p class="about-our-portfolio-description">App</p>
               </div>
             </li>
-            <li>
+            <li class=".about-our-portfolio_list_elements">
               <img src="./images/img-phoneapp.jpg" alt="Cashless Payment" width="360" />
               <div class="second-portfolio-box">
                 <h3 class="about-our-portfolio-last-title">Cashless Payment</h3>
                 <p class="about-our-portfolio-description">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class=".about-our-portfolio_list_elements">
               <img src="./images/img-note.jpg" alt="Meditation App" width="360" />
               <div class="second-portfolio-box">
                 <h3 class="about-our-portfolio-last-title">Meditation App</h3>
                 <p class="about-our-portfolio-description">App</p>
               </div>
             </li>
-            <li>
+            <li class=".about-our-portfolio_list_elements">
               <img src="./images/img-car.jpg" alt="Taxi Service" width="360" />
               <div class="second-portfolio-box">
                 <h3 class="about-our-portfolio-last-title">Taxi Service</h3>
                 <p class="about-our-portfolio-description">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class=".about-our-portfolio_list_elements">
               <img src="./images/img-phone.jpg" alt="Screen Illustrations" width="360" />
               <div class="second-portfolio-box">
                 <h3 class="about-our-portfolio-last-title">Screen Illustrations</h3>
                 <p class="about-our-portfolio-description">Design</p>
               </div>
             </li>
-            <li>
+            <li class=".about-our-portfolio_list_elements">
               <img src="./images/img-women.jpg" alt="Online Courses" width="360" />
               <div class="second-portfolio-box">
                 <h3 class="about-our-portfolio-last-title">Online Courses</h3>
@@ -163,8 +163,8 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container padding-for-section">
-        <a class="logo" href="./index.html">Web<span class="logo-span-footer">Studio</span></a>
+      <div class="container">
+        <a class="logo footer-logo" href="./index.html">Web<span class="logo-span-footer">Studio</span></a>
         <p class="footer-description">
           Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
