--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </section>
       <section class="padding-for-section">
         <div class="container">
-          <h2 class="visually-hidden">About Our Work</h2>
+          <h2 class="visually-hidden margin_title">About Our Work</h2>
           <ul class="our-work-box_style">
             <li class="our-work-box_style_list">
               <h3 class="about-our-work-title">Strategy</h3>
@@ -116,42 +116,42 @@
         <div class="container">
           <h2 class="about-our-portfolio-title">Our Portfolio</h2>
           <ul class="about-our-portfolio_list">
-            <li class=".about-our-portfolio_list_elements">
+            <li class="about-our-portfolio_list_elements">
               <img src="./images/imgapp.jpg" alt="Banking App" width="360" />
               <div class="second-portfolio-box">
                 <h3 class="about-our-portfolio-last-title">Banking App</h3>
                 <p class="about-our-portfolio-description">App</p>
               </div>
             </li>
-            <li class=".about-our-portfolio_list_elements">
+            <li class="about-our-portfolio_list_elements">
               <img src="./images/img-phoneapp.jpg" alt="Cashless Payment" width="360" />
               <div class="second-portfolio-box">
                 <h3 class="about-our-portfolio-last-title">Cashless Payment</h3>
                 <p class="about-our-portfolio-description">Marketing</p>
               </div>
             </li>
-            <li class=".about-our-portfolio_list_elements">
+            <li class="about-our-portfolio_list_elements">
               <img src="./images/img-note.jpg" alt="Meditation App" width="360" />
               <div class="second-portfolio-box">
                 <h3 class="about-our-portfolio-last-title">Meditation App</h3>
                 <p class="about-our-portfolio-description">App</p>
               </div>
             </li>
-            <li class=".about-our-portfolio_list_elements">
+            <li class="about-our-portfolio_list_elements">
               <img src="./images/img-car.jpg" alt="Taxi Service" width="360" />
               <div class="second-portfolio-box">
                 <h3 class="about-our-portfolio-last-title">Taxi Service</h3>
                 <p class="about-our-portfolio-description">Marketing</p>
               </div>
             </li>
-            <li class=".about-our-portfolio_list_elements">
+            <li class="about-our-portfolio_list_elements">
               <img src="./images/img-phone.jpg" alt="Screen Illustrations" width="360" />
               <div class="second-portfolio-box">
                 <h3 class="about-our-portfolio-last-title">Screen Illustrations</h3>
                 <p class="about-our-portfolio-description">Design</p>
               </div>
             </li>
-            <li class=".about-our-portfolio_list_elements">
+            <li class="about-our-portfolio_list_elements">
               <img src="./images/img-women.jpg" alt="Online Courses" width="360" />
               <div class="second-portfolio-box">
                 <h3 class="about-our-portfolio-last-title">Online Courses</h3>
