--- a/index.html
+++ b/index.html
@@ -48,28 +48,28 @@
       </section>
       <section class="padding-for-section">
         <div class="container">
-          <h2 class="visually-hidden margin_title">About Our Work</h2>
+          <h2 class="visually-hidden">About Our Work</h2>
           <ul class="our-work-box_style">
             <li class="our-work-box_style_list">
-              <h3 class="about-our-work-title">Strategy</h3>
+              <h3 class="about-our-work-title margin_title-second_section">Strategy</h3>
               <p class="about-our-work-description">
                 Our goal is to identify the business problem to walk away with the perfect and creative solution.
               </p>
             </li>
             <li class="our-work-box_style_list">
-              <h3 class="about-our-work-title">Punctuality</h3>
+              <h3 class="about-our-work-title margin_title-second_section">Punctuality</h3>
               <p class="about-our-work-description">
                 Bring the key message to the brand's audience for the best price within the shortest possible time.
               </p>
             </li>
             <li class="our-work-box_style_list">
-              <h3 class="about-our-work-title">Diligence</h3>
+              <h3 class="about-our-work-title margin_title-second_section">Diligence</h3>
               <p class="about-our-work-description">
                 Research and confirm brands with the strongest digital growth opportunities and minimize risk.
               </p>
             </li>
             <li class="our-work-box_style_list">
-              <h3 class="about-our-work-title">Technologies</h3>
+              <h3 class="about-our-work-title margin_title-second_section">Technologies</h3>
               <p class="about-our-work-description">
                 Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
               </p>
